--- a/FormsApp/Views/_ViewImports.cshtml
+++ b/FormsApp/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using FormsApp
 @using FormsApp.Models
 @using FormsApp.Models.Entities
+@using FormsApp.Models.VMModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
